package fr.unice.polytech.citadelle.game.purple_districts;


import fr.unice.polytech.citadelle.game.District;

public class Keep extends District {

    public Keep(String name, int value, String color, String nameOfFamily) {
        super(name, value, color, nameOfFamily);
    }

}
