package fr.unice.polytech.citadelle.game.purple_districts;

import fr.unice.polytech.citadelle.game.SpellDistrict;

public class Library  extends SpellDistrict {

    public Library(String name, int value, String color, String nameOfFamily) {
        super(name, value, color, nameOfFamily);
    }

}
