package fr.unice.polytech.citadelle.game.purple_districts;

import fr.unice.polytech.citadelle.game.SpellDistrict;

public class Observatory  extends SpellDistrict {

    public Observatory(String name, int value, String color, String nameOfFamily) {
        super(name, value, color, nameOfFamily);
    }

}
