package fr.unice.polytech.citadelle.game.purple_districts;

import fr.unice.polytech.citadelle.game.ColorDistrict;

public class SchoolOfMagic  extends ColorDistrict {

    public SchoolOfMagic(String name, int value, String color, String nameOfFamily) {
        super(name, value, color, nameOfFamily);
    }

}
