package fr.unice.polytech.citadelle.game.purple_districts;

import fr.unice.polytech.citadelle.game.BonusDistrict;

public class University  extends BonusDistrict {

    public University(String name, int value, String color, String nameOfFamily) {
        super(name, value, color, nameOfFamily);
    }

}
