@startuml
class fr.unice.polytech.citadelle.game.purple_districts.Smithy {
+ <<Create>> Smithy(String,int,String,String)
}
class fr.unice.polytech.citadelle.game.purple_districts.Observatory {
+ <<Create>> Observatory(String,int,String,String)
}
class fr.unice.polytech.citadelle.game.purple_districts.HauntedCity {
- int roundBuilt
+ <<Create>> HauntedCity(String,int,String,String,Integer)
+ int getRoundBuilt()
+ void setRoundBuilt(Integer)
}
class fr.unice.polytech.citadelle.game.purple_districts.Graveyard {
+ <<Create>> Graveyard(String,int,String,String)
}
class fr.unice.polytech.citadelle.game.purple_districts.SchoolOfMagic {
+ <<Create>> SchoolOfMagic(String,int,String,String)
}
class fr.unice.polytech.citadelle.game.purple_districts.Laboratory {
+ <<Create>> Laboratory(String,int,String,String)
}
class fr.unice.polytech.citadelle.game.purple_districts.DragonGate {
+ <<Create>> DragonGate(String,int,String,String)
}
class fr.unice.polytech.citadelle.game.purple_districts.Keep {
+ <<Create>> Keep(String,int,String,String)
}
class fr.unice.polytech.citadelle.game.purple_districts.Library {
+ <<Create>> Library(String,int,String,String)
}
class fr.unice.polytech.citadelle.game.purple_districts.University {
+ <<Create>> University(String,int,String,String)
}


fr.unice.polytech.citadelle.game.SpellDistrict <|-- fr.unice.polytech.citadelle.game.purple_districts.Smithy
fr.unice.polytech.citadelle.game.SpellDistrict <|-- fr.unice.polytech.citadelle.game.purple_districts.Observatory
fr.unice.polytech.citadelle.game.ColorDistrict <|-- fr.unice.polytech.citadelle.game.purple_districts.HauntedCity
fr.unice.polytech.citadelle.game.SpellDistrict <|-- fr.unice.polytech.citadelle.game.purple_districts.Graveyard
fr.unice.polytech.citadelle.game.ColorDistrict <|-- fr.unice.polytech.citadelle.game.purple_districts.SchoolOfMagic
fr.unice.polytech.citadelle.game.SpellDistrict <|-- fr.unice.polytech.citadelle.game.purple_districts.Laboratory
fr.unice.polytech.citadelle.game.BonusDistrict <|-- fr.unice.polytech.citadelle.game.purple_districts.DragonGate
fr.unice.polytech.citadelle.game.District <|-- fr.unice.polytech.citadelle.game.purple_districts.Keep
fr.unice.polytech.citadelle.game.SpellDistrict <|-- fr.unice.polytech.citadelle.game.purple_districts.Library
fr.unice.polytech.citadelle.game.BonusDistrict <|-- fr.unice.polytech.citadelle.game.purple_districts.University
@enduml